# flask-app

./: .gitignore  Pipfile  config.py  data-dev.sqlite  data-test.sqlite  data.sqlite  flask-app.py  hello.py  manage.py  pyproject.toml  readme.md  requirements.txt
.pytest_cache/v/cache/: lastfailed
app/: __init__.py  email.py  models.py
app/auth/: forms.py  login.html  views.py
app/main/: errors.py  forms.py  views.py
app/templates/: 404.html  base.html  index.html  user.html
app/templates/auth/: login.html  register.html
migrations/versions/: 3184c6e9dbf8_second_migration.py  94e64aa12a02_change_users_model.py
templates/: base.html  user.html
tests/: test_user_model.py
